--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -90,7 +90,8 @@ main h2 {
 }
 
 .note-input input,
-.note-input textarea {
+.note-input textarea,
+.note-input .input-body {
   display: block;
   width: 100%;
   border: 1px solid #05989e;
@@ -100,8 +101,33 @@ main h2 {
   font-weight: bold;
 }
 
+.input-title:focus {
+  outline: none;
+  border: 1px solid #05989e;
+  border: 2px solid #05989e;
+  background: #05989e;
+  background: white;
+}
+
 .input-body {
   min-height: 375px;
+  padding: 12px;
+  margin: 12px 0;
+  font-family: "Inter", sans-serif;
+  background-color: transparent;
+  color: white;
+  color: #05989e;
+  border: 1px solid white;
+  transition: 0.6s;
+  border-radius: 4px;
+}
+
+.input-body:focus {
+  outline: none;
+  border: 1px solid #05989e;
+  border: 2px solid #05989e;
+  background: #05989e;
+  background: white;
 }
 
 .input-archived {
@@ -225,7 +251,7 @@ button:focus {
 }
 
 footer {
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   width: 100%;
   background-color: #05989e;
